--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
 
     <meta charset="utf-8" />
+
+    <style>
+      html,
+      body {
+        height: 90%;
+      }
+
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #588da8;
+        flex-direction: column;
+      }
+    </style>
   </head>
 
   <body>
